--- a/.github/workflows/backend-k6.yml
+++ b/.github/workflows/backend-k6.yml
@@ -9,6 +9,39 @@ env:
   IMAGE: yagubogu/yagubogu-backend
 
 jobs:
+  build:
+    runs-on: ubuntu-22.04-arm
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./backend
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v4  # ✅ 이게 있어야 ./backend 가 생김
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3.3.0
+        with:
+          username: ${{ secrets.DOCKERHUB_DEPLOY_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_DEPLOY_TOKEN }}
+
+      - name: Docker Image Build & Push (arm64-arch)
+        run: |
+          TAG_LATEST="dev-latest"
+          # Dockerfile 경로: backend/Dockerfile
+          docker buildx build \
+          --cache-to=type=registry,ref=$IMAGE:build-cache,mode=max \
+          --cache-from=type=registry,ref=$IMAGE:build-cache \
+          -f Dockerfile \
+          --platform linux/arm64 \
+          -t $IMAGE:$TAG_LATEST \
+          --push \
+          .
+
   cd:
     runs-on: [ self-hosted, dev-k6 ]
     env:
