chore: client-id값 test용으로 변경

--- a/backend/src/main/resources/application-k6.yml
+++ b/backend/src/main/resources/application-k6.yml
@@ -42,7 +42,7 @@ oauth:
   google:
     base-uri: 'http://wiremock:8080'
     token-info-uri: '/tokeninfo'
-    client-id: ${GOOGLE_CLIENT_ID}
+    client-id: mock-client-id
     connect-timeout: 180s
     read-timeout: 180s
 
