chore: tomcat thread 수 20 설정

--- a/backend/src/main/resources/application-k6.yml
+++ b/backend/src/main/resources/application-k6.yml
@@ -58,3 +58,8 @@ oauth:
     client-id: mock-client-id
     connect-timeout: 180s
     read-timeout: 180s
+
+server:
+  tomcat:
+    threads:
+      max: 20
