chore: application.yml의 톰캣, hikariCP 설정 형식 오버라이드

--- a/backend/src/main/resources/application-k6.yml
+++ b/backend/src/main/resources/application-k6.yml
@@ -3,18 +3,24 @@ spring:
   transaction:
     default-timeout: 30
 
+# ------
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
     hikari:
-      maximum-pool-size: 5
-      minimum-idle: 5
-      connection-timeout: 30000
-      max-lifetime: 600000
-      idle-timeout: 300000
-      leak-detection-threshold: 30000
+      maximumPoolSize: 36
+      minimumIdle: 18
+      connectionTimeout: 15000
+      idleTimeout: 300000
+      maxLifetime: 540000
+      validationTimeout: 1000
+      leak-detection-threshold: 15000
+
+  task:
+    execution:
+      pool:
+        core-size: 2
+        max-size: 4
+        queue-capacity: 200
+# ------
 
   jpa:
     hibernate:
@@ -26,6 +32,15 @@ spring:
 
   flyway:
     enabled: true
+
+# ------
+server:
+  tomcat:
+    threads:
+      max: 104
+      min-spare: 16
+    accept-count: 100
+# ------
 
 management:
   metrics:
@@ -59,7 +74,3 @@ oauth:
     connect-timeout: 180s
     read-timeout: 180s
 
-server:
-  tomcat:
-    threads:
-      max: 20
