chore: 톰캣 스레드 max 5로 설정

--- a/backend/src/main/resources/application-k6.yml
+++ b/backend/src/main/resources/application-k6.yml
@@ -27,6 +27,13 @@ spring:
   flyway:
     enabled: true
 
+server:
+  tomcat:
+    threads:
+      max: 5
+      min-spare: 16
+    accept-count: 100
+
 management:
   metrics:
     enable:
