chore: max connections 수정

--- a/backend/src/main/resources/application-k6.yml
+++ b/backend/src/main/resources/application-k6.yml
@@ -40,7 +40,8 @@ server:
     threads:
       max: 10
       min-spare: 10
-    accept-count: 50
+    accept-count: 100
+    max-connections: 200
 
 management:
   metrics:
