--- a/crawling/src/test/resources/application.yml
+++ b/crawling/src/test/resources/application.yml
@@ -37,22 +37,61 @@ api:
 kbo:
   crawler:
     base-url: https://www.koreabaseball.com/Schedule/ScoreBoard.aspx
-    navigation-timeout: 7s
-    table-timeout: 3s
-    wait-timeout: 3s
+    navigation-timeout: 60000
+    table-timeout: 30000
+    wait-timeout: 30000
     max-retries: 1
-    retry-delay: 500ms
+    retry-delay: 500
     context-pool-size: 2
-
-    # 셀렉터
-    date-field-selector: "#cphContents_cphContents_cphContents_hfSearchDate"
-    date-label-selector: "#cphContents_cphContents_cphContents_lblGameDate"
-    update-panel-selector: "#cphContents_cphContents_cphContents_udpRecord"
-    score-selector: ".smsScore"
-
-    # WebForms 포스트백 타겟
-    event-target: "ctl00$ctl00$ctl00$cphContents$cphContents$cphContents$btnCalendarSelect"
 
     runner:
       enabled: false
       schedule-type: "regular"
+
+  selectors:
+    # 달력 네비게이션
+    calendar:
+      trigger: "//img[contains(@class, 'ui-datepicker-trigger')]"
+      container: "//div[@id='ui-datepicker-div']"
+      year-select: "//select[contains(@class, 'ui-datepicker-year')]"
+      month-select: "//select[contains(@class, 'ui-datepicker-month')]"
+      day-link: "//div[@id='ui-datepicker-div']//td[not(contains(@class,'ui-datepicker-other-month'))]//a[normalize-space(text())='%s']"
+      date-label: "//span[@id='cphContents_cphContents_cphContents_lblGameDate']"
+      update-panel: "//div[@id='cphContents_cphContents_cphContents_udpRecord']"
+
+    # 스코어보드
+    scoreboard:
+      container: "//div[contains(@class, 'smsScore')]"
+      status: ".//span[contains(@class, 'flag')]/span"
+      stadium: ".//em[contains(@class, 'place')]"
+      start-time: ".//em[contains(@class, 'place')]/span"
+
+      # 팀 정보
+      away-team:
+        name: ".//div[contains(@class, 'leftTeam')]//span[contains(@class, 'teamT')]"
+        score: ".//div[contains(@class, 'leftTeam')]//span[contains(@class, 'score')]/span"
+
+      home-team:
+        name: ".//div[contains(@class, 'rightTeam')]//span[contains(@class, 'teamT')]"
+        score: ".//div[contains(@class, 'rightTeam')]//span[contains(@class, 'score')]/span"
+
+      # 박스스코어 링크
+      box-score-link: ".//a[contains(@class, 'btnSms')]//a[contains(@href, 'gameId=')]"
+
+      # 이닝별 점수 테이블
+      score-table:
+        table: ".//table[contains(@class, 'tScore')]"
+        rows: ".//tbody/tr"
+        team-name: ".//th"
+        cells: ".//td"
+
+      # 투수 정보
+      pitcher:
+        container: ".//div[contains(@class, 'score_wrap')]//p[contains(@class, 'win')]"
+        spans: ".//span"
+
+  # 정규표현식 패턴
+  patterns:
+    pitcherLabel: "^\\s*(승|세|패)\\s*[:：]\\s*(.+?)\\s*$"
+    dateFormat: "yyyy.MM.dd"
+    timeFormat: "HH:mm"
