--- a/crawling/src/test/resources/application.yml
+++ b/crawling/src/test/resources/application.yml
@@ -36,59 +36,74 @@ api:
 
 kbo:
   crawler:
-    base-url: https://www.koreabaseball.com/Schedule/ScoreBoard.aspx
-    navigation-timeout: 60000
-    table-timeout: 30000
-    wait-timeout: 30000
+    base-url: https://www.koreabaseball.com
+    score-board-url: https://www.koreabaseball.com/Schedule/ScoreBoard.aspx
+    game-center-url: https://www.koreabaseball.com/Schedule/GameCenter/Main.aspx
+    navigation-timeout: 10000
+    table-timeout: 5000
+    wait-timeout: 5000
     max-retries: 1
     retry-delay: 500
+
     context-pool-size: 2
 
-    runner:
-      enabled: false
-      schedule-type: "regular"
+  scheduler:
+    default-game-start-time: "18:30"
+    polling-interval: 1m
+
+  retry:
+    per-game:
+      quick-threshold: 5
+      quick-interval: 2m
+      max-backoff: 8m
+      max-attempts: 12
+      warn-threshold: 15
+    global:
+      first: 1m
+      second: 2m
+      max: 5m
 
   selectors:
     # 달력 네비게이션
     calendar:
       trigger: "//img[contains(@class, 'ui-datepicker-trigger')]"
       container: "//div[@id='ui-datepicker-div']"
-      year-select: "//select[contains(@class, 'ui-datepicker-year')]"
-      month-select: "//select[contains(@class, 'ui-datepicker-month')]"
-      day-link: "//div[@id='ui-datepicker-div']//td[not(contains(@class,'ui-datepicker-other-month'))]//a[normalize-space(text())='%s']"
-      date-label: "//span[@id='cphContents_cphContents_cphContents_lblGameDate']"
-      update-panel: "//div[@id='cphContents_cphContents_cphContents_udpRecord']"
+      yearSelect: "//select[contains(@class, 'ui-datepicker-year')]"
+      monthSelect: "//select[contains(@class, 'ui-datepicker-month')]"
+      dayLink: "//div[@id='ui-datepicker-div']//td[not(contains(@class,'ui-datepicker-other-month'))]//a[normalize-space(text())='%s']"
+      dateLabel: "//span[@id='cphContents_cphContents_cphContents_lblGameDate']"
+      updatePanel: "//div[@id='cphContents_cphContents_cphContents_udpRecord']"
 
-    # 스코어보드
+    # 스코어보드 (CSS Selector - 안정적)
     scoreboard:
-      container: "//div[contains(@class, 'smsScore')]"
-      status: ".//span[contains(@class, 'flag')]/span"
-      stadium: ".//em[contains(@class, 'place')]"
-      start-time: ".//em[contains(@class, 'place')]/span"
+      container: ".smsScore"
+      status: ".flag span"
+      stadium: ".place"
+      startTime: ".place span"
 
       # 팀 정보
-      away-team:
-        name: ".//div[contains(@class, 'leftTeam')]//span[contains(@class, 'teamT')]"
-        score: ".//div[contains(@class, 'leftTeam')]//span[contains(@class, 'score')]/span"
+      awayTeam:
+        name: ".leftTeam .teamT"
+        score: ".leftTeam .score span"
 
-      home-team:
-        name: ".//div[contains(@class, 'rightTeam')]//span[contains(@class, 'teamT')]"
-        score: ".//div[contains(@class, 'rightTeam')]//span[contains(@class, 'score')]/span"
+      homeTeam:
+        name: ".rightTeam .teamT"
+        score: ".rightTeam .score span"
 
       # 박스스코어 링크
-      box-score-link: ".//a[contains(@class, 'btnSms')]//a[contains(@href, 'gameId=')]"
+      boxScoreLink: ".btnSms a[href*='gameId=']"
 
       # 이닝별 점수 테이블
-      score-table:
-        table: ".//table[contains(@class, 'tScore')]"
-        rows: ".//tbody/tr"
-        team-name: ".//th"
-        cells: ".//td"
+      scoreTable:
+        table: "table.tScore"
+        rows: "tbody tr"
+        team-name: "th"
+        cells: "td"
 
       # 투수 정보
       pitcher:
-        container: ".//div[contains(@class, 'score_wrap')]//p[contains(@class, 'win')]"
-        spans: ".//span"
+        container: ".score_wrap p.win"
+        spans: "span"
 
   # 정규표현식 패턴
   patterns:
