--- a/crawling/src/main/resources/application.yml
+++ b/crawling/src/main/resources/application.yml
@@ -103,6 +103,9 @@ kbo:
     dateFormat: "yyyy.MM.dd"
     timeFormat: "HH:mm"
 
+app:
+  clock:
+    fixed-date: 2024-08-15
 ---
 spring:
   config:
