chore: 설정값 수정
- 두 모듈이 같은 db를 사용하고 있으므로 local에서 create-drop은 주인인 app 모듈에서 한다.

--- a/crawling/src/main/resources/application-local.yml
+++ b/crawling/src/main/resources/application-local.yml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
@@ -18,4 +18,8 @@ spring:
       mode: never
 
   flyway:
+    enabled: false
     clean-disabled: false
+
+server:
+  port: 9000
