--- a/crawling/src/main/resources/application.yml
+++ b/crawling/src/main/resources/application.yml
@@ -11,10 +11,7 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
 
   flyway:
-    locations:
-      - classpath:db/migration
-      - classpath:db/migration/mysql
-    validate-on-migrate: true
+    enabled: false
 
   datasource:
     hikari:
@@ -106,6 +103,7 @@ kbo:
 app:
   clock:
     fixed-date: 2024-08-15
+
 ---
 spring:
   config:
