--- a/backend/src/main/resources/application-k6.yml
+++ b/backend/src/main/resources/application-k6.yml
@@ -9,19 +9,19 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     hikari:
-      maximum-pool-size: 5
-      minimum-idle: 5
-      connection-timeout: 30000
+      maximum-pool-size: 3
+      minimum-idle: 0
+      connection-timeout: 5000
       max-lifetime: 600000
       idle-timeout: 300000
-      leak-detection-threshold: 30000
+      leak-detection-threshold: 4000
 
   task:
     execution:
       pool:
-        core-size: 2
-        max-size: 4
-        queue-capacity: 200
+        core-size: 10
+        max-size: 10
+        queue-capacity: 0
       thread-name-prefix: app-async-
 
   jpa:
@@ -38,7 +38,7 @@ spring:
 server:
   tomcat:
     threads:
-      max: 10
+      max: 30
       min-spare: 10
     accept-count: 100
     max-connections: 200
@@ -47,6 +47,7 @@ management:
   metrics:
     enable:
       tomcat: true
+      hikaricp: true
     distribution:
       percentiles-histogram:
         http.server.requests: true
