--- a/.github/workflows/backend-k6.yml
+++ b/.github/workflows/backend-k6.yml
@@ -1,4 +1,4 @@
-name: YaguBogu Backend Dev K6
+name: YaguBogu Backend Dev
 
 on:
   push:
@@ -9,16 +9,29 @@ env:
   IMAGE: yagubogu/yagubogu-backend
 
 jobs:
-  build:
-    runs-on: ubuntu-22.04-arm
+  ci:
+    runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
         working-directory: ./backend
     permissions:
       contents: read
+
     steps:
-      - uses: actions/checkout@v4  # ✅ 이게 있어야 ./backend 가 생김
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'corretto'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Run Tests
+        run: ./gradlew test
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -29,22 +42,19 @@ jobs:
           username: ${{ secrets.DOCKERHUB_DEPLOY_USERNAME }}
           password: ${{ secrets.DOCKERHUB_DEPLOY_TOKEN }}
 
-      - name: Docker Image Build & Push (arm64-arch)
+      - name: Docker Image Build & Push (multi-arch)
         run: |
           TAG_LATEST="dev-latest"
           # Dockerfile 경로: backend/Dockerfile
           docker buildx build \
-          --cache-to=type=registry,ref=$IMAGE:build-cache,mode=max \
-          --cache-from=type=registry,ref=$IMAGE:build-cache \
-          -f Dockerfile \
-          --platform linux/arm64 \
-          -t $IMAGE:$TAG_LATEST \
-          --push \
-          .
-
+            -f Dockerfile \
+            --platform linux/arm64 \
+            -t $IMAGE:$TAG_LATEST \
+            --push \
+            .
   cd:
-    needs: build
-    runs-on: [ self-hosted, dev-k6 ]
+    needs: ci
+    runs-on: [ self-hosted, develop ]
     env:
       IMAGE: yagubogu/yagubogu-backend
       TAG: "dev-latest"
@@ -60,7 +70,6 @@ jobs:
           echo "Docker 이미지 pull 시작"
           docker pull $IMAGE:$TAG
           echo "Docker 이미지 pull 완료"
-
       - name: Stop & Remove existing container (by name)
         run: |
           set -e
@@ -75,7 +84,6 @@ jobs:
           fi
           echo "포트 80 점유 프로세스 확인 및 정리"
           sudo fuser -k -n tcp 80 || true
-
       - name: Run docker container
         run: |
           set -e
@@ -86,18 +94,16 @@ jobs:
             --restart unless-stopped \
             --network yagubogu-net \
             -p 80:8080 \
-            -e SPRING_PROFILES_ACTIVE=k6 \
+            -e SPRING_PROFILES_ACTIVE=dev \
             -e DB_URL="${{ secrets.DB_URL }}" \
             -e DB_USERNAME="${{ secrets.DB_USERNAME }}" \
             -e DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-            -e MONITORING_SERVER_IP="${{ secrets.MONITORING_SERVER_IP }}" \
             -e GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" \
-            -e ACCESS_TOKEN_SECRET_KEY="${{ secrets.ACCESS_TOKEN_SECRET_KEY_DEV }}" \
+            -e ACCESS_TOKEN_SECRET_KEY="${{ secrets.ACCESS_TOKEN_SECRET_KEY }}" \
             -e REFRESH_TOKEN_SECRET_KEY="${{ secrets.REFRESH_TOKEN_SECRET_KEY }}" \
             $IMAGE:$TAG
           
-          echo "컨테이너 실행 완료."  
-
+          echo "컨테이너 실행 완료."
       - name: Docker image Prune
         run: |
           echo "사용하지 않는 Docker 이미지 정리 중..."
