--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -17,20 +17,7 @@ spring:
     enabled: true
 
 management:
-  metrics:
-    distribution:
-      percentiles-histogram:
-        http.server.requests: true
-    tags:
-      app: yagubogu
-      env: dev
   endpoints:
     web:
       exposure:
-        include: prometheus, health
-  tracing:
-    sampling:
-      probability: 0.1
-  otlp:
-    tracing:
-      endpoint: http://${MONITORING_SERVER_IP}:4317
+        include: health
