--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -20,23 +20,10 @@ spring:
     enabled: true
 
 management:
-  metrics:
-    distribution:
-      percentiles-histogram:
-        http.server.requests: true
-    tags:
-      app: yagubogu
-      env: prod
   endpoints:
     web:
       exposure:
-        include: prometheus, health
-  tracing:
-    sampling:
-      probability: 0.2
-  otlp:
-    tracing:
-      endpoint: http://${MONITORING_SERVER_IP}:4317
+        include: health
 
 springdoc:
   api-docs:
