feat: 서버 간 이벤트 전달을 위한 RabbitMQ 도입
- 크롤링 서버와 앱 서버 분리로 ApplicationEventPublisher 동작 불가
- RabbitMQ를 통한 비동기 메시지 전달 구현
- 경기 종료 시 즉시 ETL 트리거 가능

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -34,6 +34,23 @@ spring:
         queue-capacity: 200
       thread-name-prefix: app-async-
 
+  rabbitmq:
+    host: ${RABBITMQ_HOST:localhost}
+    port: ${RABBITMQ_PORT:5672}
+    username: ${RABBITMQ_USERNAME:guest}
+    password: ${RABBITMQ_PASSWORD:guest}
+    listener:
+      simple:
+        acknowledge-mode: auto
+        concurrency: 1
+        max-concurrency: 5
+        retry:
+          enabled: true
+          initial-interval: 1000
+          max-attempts: 3
+          max-interval: 10000
+          multiplier: 2.0
+
 server:
   tomcat:
     threads:
