--- a/crawling/src/main/resources/application.yml
+++ b/crawling/src/main/resources/application.yml
@@ -23,6 +23,12 @@ spring:
       validationTimeout: 1000
       poolName: crawling-hikari-pool
 
+  rabbitmq:
+    host: ${RABBITMQ_HOST:localhost}
+    port: ${RABBITMQ_PORT:5672}
+    username: ${RABBITMQ_USERNAME:guest}
+    password: ${RABBITMQ_PASSWORD:guest}
+
 kbo:
   crawler:
     base-url: https://www.koreabaseball.com
