--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.auth0:java-jwt:4.4.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.flywaydb:flyway-mysql:10.20.1'
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     implementation 'io.micrometer:micrometer-registry-prometheus'
