--- a/crawling/build.gradle
+++ b/crawling/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
