fix: producer에서 메세지 발행시 json으로 발행하도록 converter 설정

--- a/crawling/src/test/resources/application.yml
+++ b/crawling/src/test/resources/application.yml
@@ -22,6 +22,12 @@ spring:
       maxLifetime: 1800000
       poolName: crawling-hikari-test
 
+  rabbitmq:
+    host: ${RABBITMQ_HOST:localhost}
+    port: ${RABBITMQ_PORT:5672}
+    username: ${RABBITMQ_USERNAME}
+    password: ${RABBITMQ_PASSWORD}
+
   sql:
     init:
       mode: never
