--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ datastorePreferences = "1.1.7"
 firebaseBom = "34.0.0"
 fragmentKtx = "1.8.8"
 hiltAndroid = "2.57.2"
+hiltNavigationCompose = "1.3.0"
 kotestAssertionsCore = "6.0.3"
 kotestRunnerJunit5 = "6.0.3"
 kotlin = "2.1.0"
@@ -55,6 +56,7 @@ androidx-credentials = { module = "androidx.credentials:credentials", version.re
 androidx-credentials-play-services-auth = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentials" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata" }
 androidx-viewpager2 = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager2" }
 balloon = { module = "com.github.skydoves:balloon", version.ref = "balloon" }
