refactor: stadium/team 통계 캐시 write-through 전환 - 체크인 직후 캐시 증분 후 이벤트 기반 `check-in-created` 팬비율 SSE를 chunk 병렬 전송 - 통계 캐시를 구장/팀 단위 write-through로 전환하고 5초 집계 스케줄러 제거 - 매시 캐시 재계산 배치 추가, 스케줄러 풀 8로 확장

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -69,6 +69,16 @@ sse:
   heartbeat:
     enabled: true
     interval-ms: 25000
+  stats:
+    chunk-size: 100
+    executor:
+      pool-size: 10
+      queue-capacity: 200
+
+logging:
+  level:
+    com.yagubogu.sse: info
+    com.yagubogu.stat: info
 
 app:
   s3:
