--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -47,7 +47,7 @@ activityCompose = "1.10.1"
 composeBom = "2025.08.01"
 ksp = "2.1.0-1.0.29"
 nav3Core = "1.0.0"
-lifecycleViewmodelNav3 = "2.10.0-rc01"
+lifecycleViewmodelNav3 = "2.10.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
