--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.9.3"
+agp = "8.12.3"
 balloon = "1.6.13"
 appUpdate = "2.1.0"
 calendar = "2.9.0"
@@ -14,7 +14,7 @@ hiltAndroid = "2.57.2"
 hiltNavigationCompose = "1.3.0"
 kotestAssertionsCore = "6.0.3"
 kotestRunnerJunit5 = "6.0.3"
-kotlin = "2.1.0"
+kotlin = "2.2.20"
 coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -46,9 +46,10 @@ glide = "4.16.0"
 googleOssLicenses = "0.10.7"
 activityCompose = "1.10.1"
 composeBom = "2025.08.01"
-ksp = "2.1.0-1.0.29"
+ksp = "2.3.4"
 nav3Core = "1.0.0"
 lifecycleViewmodelNav3 = "2.10.0"
+ktorfit = "2.7.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -123,6 +124,6 @@ google-services = { id = "com.google.gms.google-services", version.ref = "google
 firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlytics" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize" }
 google-oss-licenses-plugin = { id = "com.google.android.gms.oss-licenses-plugin", version.ref = "googleOssLicenses" }
-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" }
+ktorfit = { id = "de.jensklingenberg.ktorfit", version.ref = "ktorfit" }
