--- a/backend/crawling/src/main/resources/application-local.yml
+++ b/backend/crawling/src/main/resources/application-local.yml
@@ -7,15 +7,17 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+    defer-datasource-initialization: true
 
   sql:
     init:
-      mode: never
+      mode: always
+      data-locations: classpath:data.sql
 
   flyway:
     enabled: false
