--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.main.YaguBoguActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
